jquery coming along

--- a/views/upload.pug
+++ b/views/upload.pug
@@ -99,7 +99,7 @@ block content
                     ul.dropdown-menu(role='menu', aria-labelledby='dropdownMenu1' style="margin-top:-17px;margin-left:-81px;")
                       each category in categories
                         li(role='presentation')
-                          a.categoryValue(style="cursor:pointer;" data-value=`${category.name}`) #{category.displayName}
+                          a.categoryValue(style="cursor:pointer;" data-value=category.name) #{category.displayName}
 
                     br
                     br
