--- a/views/mediaBrowsing/popularUploads.pug
+++ b/views/mediaBrowsing/popularUploads.pug
@@ -172,32 +172,8 @@ block content
         br
         each upload in uploads
             div.col-sm-4(style="text-align:center;height:360px;")
-                a.title-anchor(href=`/user/${upload.uploader.channelUrl}/${upload.uniqueTag}` style="color:black" )
 
-                    if upload.thumbnails && upload.thumbnails.custom
-                        img.preview-image(src=`${uploadServer}/${upload.uploader.channelUrl}/${upload.thumbnails.custom}` style="width:inherit;max-width:302px;")
-
-                    else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.generated
-                        img.preview-image(src=`${uploadServer}/${upload.uploader.channelUrl}/${upload.thumbnails.generated}` style="width:inherit;max-width:302px;")
-
-                    else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.medium
-                        img.preview-image(src=`${uploadServer}/${upload.uploader.channelUrl}/${upload.thumbnails.medium}` style="width:inherit;max-width:302px;")
-
-                    else if upload.fileType == 'video' && !upload.thumbnailUrl
-                        img.preview-image(src="/no_img.png")
-
-                    else if upload.fileType == 'image'
-                        img.preview-image(src=`${uploadServer}/${upload.uploader.channelUrl}/${upload.uniqueTag}${upload.fileExtension}` style="width:inherit;max-width:302px;")
-
-                    else if upload.fileType == 'audio'
-                        img.preview-image(src='/images/audio.svg')
-
-                    else if upload.fileType == 'unknown'
-                        img.preview-image(src='/images/no_img.png')
-
-                    div
-                        p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:6px;") #{upload.title}
-                    br
+                include ../viewPartials/uploadThumbnail
 
                 div.upload-details
                     if englishString !== 'All Time'
