--- a/views/mediaBrowsing/recentUploads.pug
+++ b/views/mediaBrowsing/recentUploads.pug
@@ -67,63 +67,11 @@ block content
             h1 Recently Uploaded
             br
 
-            div.dropdown(style="display:inline;padding-right:15px;")
-                button#dropdownMenu1.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;")
-                    | File Type: #{media.charAt(0).toUpperCase() + media.slice(1)} &nbsp
-                    span.caret
+            include ../viewPartials/mediaDropdown
 
-                ul.dropdown-menu(role='menu', aria-labelledby='dropdownMenu1')
-                    li(role='presentation')
-                        a(href=`/media/recent/1?media=all&category=${category}`) All
-                    li(role='presentation')
-                        a(href=`/media/recent/1?media=video&category=${category}`) Videos
-                    li(role='presentation')
-                        a(href=`/media/recent/1?media=audio&category=${category}`) Audio
-                    li(role='presentation')
-                        a(href=`/media/recent/1?media=image&category=${category}`) Images
-            //br
+            include ../viewPartials/sensitivityFilterDropdown
 
-            div.dropdown(style="display:inline")
-                button#dropdownMenu1.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px")
-                    if siteVisitor.filter == 'allAges'
-                        | Rating: SFW &nbsp
-                    else if siteVisitor.filter == 'mature'
-                        | Rating: SFW/NSWF &nbsp
-                    span.caret
-
-                ul.dropdown-menu(role='menu', aria-labelledby='dropdownMenu1')
-                    li(role='presentation')
-                        if siteVisitor.filter == 'mature'
-                            a.changeFilterButton(value="allAges" href="#") SFW
-                        else if siteVisitor.filter == 'allAges'
-                            a.changeFilterButton(value="mature" href="#") SFW/NFSW
-                    //li(role='presentation')
-                    //    a(href=`/media/recent/1?media=video`) Sensitive
-                    //li(role='presentation')
-                    //    a(href=`/media/recent/1?media=audio`) Audio
-                    //li(role='presentation')
-                    //    a(href=`/media/recent/1?media=image`) Images
-
-
-
-
-            // TOP PAGINATION
-            nav.center-block.text-center(aria-label='Page navigation example')
-                ul.pagination
-                    li.page-item
-                        a.page-link(href=`/media/recent/${previousNumber}?media=${media}&category${category}`) <
-
-                    each number in numbersArray
-                        li.page-item(class=(number == highlightedNumber) ? 'active' : undefined)
-                            a.page-link(href=`/media/recent/${number}?media=${media}&category=${category}`) #{number}
-
-                    li.page-item
-                        a.page-link(href=`/media/recent/${nextNumber}?media=${media}&category=${category}`) >
-
-
-
-
-
+            include ../viewPartials/pagination
 
             br
 
@@ -166,31 +114,13 @@ block content
                                     div.changeRating(style="margin-top:30px;")
                                         input.ratingChanged(type="checkbox" value=`${upload._id}`)
 
-
-
-            if user && user.role == 'admin'
-                div.center-block.text-center.col-sm-12
-                    button.btn-lg.button-success.change-rating(rating="sensitive") Mark As Sensitive
-                    button.btn-lg.button-success.change-rating(rating="mature") Mark As NSFW (Mature)
-                    button.btn-lg.button-success.change-rating(rating="allAges") Mark As SFW (AllAges)
-
+            include ../viewPartials/adminSensitivityButtons
 
             div.center-block.text-center.col-sm-12
 
-
                         div.dropdown
 
-                            nav.center-block.text-center(aria-label='Page navigation example')
-                                ul.pagination
-                                    li.page-item
-                                        a.page-link(href=`/media/recent/${previousNumber}?media=${media}`) <
-
-                                    each number in numbersArray
-                                        li.page-item(class=(number == highlightedNumber) ? 'active' : undefined)
-                                            a.page-link(href=`/media/recent/${number}?media=${media}`) #{number}
-
-                                    li.page-item
-                                        a.page-link(href=`/media/recent/${nextNumber}?media=${media}`) >
+                            include ../viewPartials/pagination
 
 
         if user && user.role == 'admin'
