--- a/views/mediaBrowsing/popularUploads.pug
+++ b/views/mediaBrowsing/popularUploads.pug
@@ -139,6 +139,8 @@ block content
 
             //br
 
+            include ../viewPartials/mediaDropdown
+
             div.dropdown(style="display:inline")
                 button#dropdownMenu1.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px")
                     if siteVisitor.filter == 'allAges'
