--- a/views/account/editUpload.pug
+++ b/views/account/editUpload.pug
@@ -24,6 +24,36 @@ block content
             .col-sm-7
                 textarea(id="description" name="description" maxlength='2000' rows="10" cols="70") #{upload.description}
 
+        div.dropdown(style="display:inline;padding-right:15px;")
+            button#dropdownMenu1.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;")
+                | Category: &nbsp
+                span.caret
+
+            ul.dropdown-menu(role='menu', aria-labelledby='dropdownMenu1' style="margin-top:-17px;margin-left:-81px;")
+                each category in categories
+                    li(role='presentation')
+                        a.categoryValue(style="cursor:pointer;" data-value=category.name data-displayname=category.displayName) #{category.displayName}
+
+            br
+
+        div.form-group
+            div.categoryName(style="display:none")
+                h5.categoryDisplayName Category: $Thing
+                br
+
+                // subcategories
+                each category in categories
+                    if category.subcategories && category.subcategories.length > 1
+                        div.subcategories(class=category.name style="display:none;")
+                            label(for='subcategory') Subcategory
+                            each subcategory in category.subcategories
+                                div.radio-buttons.subcategory(class=category.name style="display:none")
+                                    label.radio-inline
+                                        input.radio-button(type='radio', name='subcategory' value=subcategory.name required)
+                                        | #{subcategory.displayName}
+
+                                    br
+                                    br
 
         // dont show if its already moderated by admin or mod
         if !hideRatingFrontend
@@ -46,7 +76,6 @@ block content
                         | Safe For Work
                         br
                         br
-
 
         if upload.fileType == 'video' || upload.fileType == 'audio'
 
@@ -117,3 +146,24 @@ block content
 
         // add here
 
+    script.
+      $('.categoryValue').click(function () {
+        var value = $(this).data("value");
+
+        var displayName = $(this).data("displayname");
+
+        // hide all subcategories
+        $('.subcategories').hide();
+
+        selectedCategory = value;
+
+        // display selected category
+        $('.categoryDisplayName').text('Category: ' + displayName)
+
+        // show subcategories if they exist
+        $('.categoryName').show();
+        $('.' + value).show();
+
+
+        console.log(value, displayName);
+      })
