--- a/views/upload.pug
+++ b/views/upload.pug
@@ -91,6 +91,38 @@ block content
                         | Private
                     br
 
+                  div.dropdown(style="display:inline;padding-right:15px;")
+                    button#dropdownMenu1.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;")
+                      | Category: &nbsp
+                      span.caret
+
+                    ul.dropdown-menu(role='menu', aria-labelledby='dropdownMenu1' style="margin-top:-17px;margin-left:-81px;")
+                      each category in categories
+                        li(role='presentation')
+                          a.categoryValue(style="cursor:pointer;" data-value=category.name data-displayname=category.displayName) #{category.displayName}
+
+                    br
+
+                  br
+                  div.categoryName(style="display:none")
+                    h5.categoryDisplayName Category: $Thing
+                    br
+
+                  // subcategories
+                  each category in categories
+                    if category.subcategories && category.subcategories.length > 1
+                      div.subcategories(class=category.name style="display:none;")
+                        label(for='subcategory') Subcategory
+                        each subcategory in category.subcategories
+                            div.radio-buttons.subcategory(class=category.name style="display:none")
+                              label.radio-inline
+                                input.radio-button(type='radio', name='subcategory' value=subcategory.name required)
+                                | #{subcategory.displayName}
+
+                              br
+                              br
+                        br
+
                   label(for='rating') Rating (*)
                   br
                   div.radio-buttons.rating
