--- a/views/upload.pug
+++ b/views/upload.pug
@@ -112,7 +112,7 @@ block content
                   each category in categories
                     if category.subcategories && category.subcategories.length > 1
                       div.subcategories(class=category.name style="display:none;")
-                        label(for='subcategory') Subcategory
+                        label(for='subcategory') Subcategory (Optional)
                         each subcategory in category.subcategories
                             div.radio-buttons.subcategory(class=category.name style="display:none")
                               label.radio-inline
