--- a/views/account/editUpload.pug
+++ b/views/account/editUpload.pug
@@ -190,7 +190,7 @@ block content
           url: $theForm.attr('action'),
           data,
           success: function (data) {
-            console.log('Yay! Form sent.');
+            location.reload();
           }
         });
 
